// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ToolGroupMessage /> > Border Color Logic > uses gray border when all tools are successful and no shell commands 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
│                                                                              │
│ ✓  another-tool A tool for testing                                           │
│                                                                              │
│ Test result                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Border Color Logic > uses yellow border for shell commands even when successful 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  run_shell_command A tool for testing                                      │
│                                                                              │
│ Test result                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Border Color Logic > uses yellow border when tools are pending 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ o  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Confirmation Handling > shows confirmation dialog for first confirming tool only 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ?  first-confirm A tool for testing ←                                        │
│                                                                              │
│ Test result                                                                  │
│ Confirm first tool                                                           │
│                                                                              │
│ Do you want to proceed?                                                      │
│                                                                              │
│ ● 1. Yes, allow once                                                         │
│   2. Yes, allow always                                                       │
│   3. No, suggest changes (esc)                                               │
│                                                                              │
│                                                                              │
│ ?  second-confirm A tool for testing                                         │
│                                                                              │
│ Test result                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders empty tool calls array 1`] = `""`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders mixed tool calls including shell command 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  read_file Read a file                                                     │
│                                                                              │
│ Test result                                                                  │
│                                                                              │
│ ⊷  run_shell_command Run command                                             │
│                                                                              │
│ Test result                                                                  │
│                                                                              │
│ o  write_file Write to file                                                  │
│                                                                              │
│ Test result                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders multiple tool calls with different statuses 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  successful-tool This tool succeeded                                       │
│                                                                              │
│ Test result                                                                  │
│                                                                              │
│ o  pending-tool This tool is pending                                         │
│                                                                              │
│ Test result                                                                  │
│                                                                              │
│ x  error-tool This tool failed                                               │
│                                                                              │
│ Test result                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders shell command with yellow border 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  run_shell_command Execute shell command                                   │
│                                                                              │
│ Test result                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders single successful tool call 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders sticky header when scrolled 1`] = `
"│                                                                              │
│ ✓  tool-2 Description 2                                                      │
│    Description 2                                                             │
│    Description 2                                                             │
│    Description 2                                                             │                                       ▄
│    Description 2                                                             │                                       █
│                                                                              │                                       █
│                                                                              │                                       █
│ Test result                                                                  │                                       █
╰──────────────────────────────────────────────────────────────────────────────╯                                       █"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders tool call awaiting confirmation 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ?  confirmation-tool This tool needs confirmation ←                          │
│                                                                              │
│ Test result                                                                  │
│ Are you sure you want to proceed?                                            │
│                                                                              │
│ Do you want to proceed?                                                      │
│                                                                              │
│ ● 1. Yes, allow once                                                         │
│   2. Yes, allow always                                                       │
│   3. No, suggest changes (esc)                                               │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders tool call with outputFile 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool-with-file Tool that saved output to file                             │
│                                                                              │
│ Test result                                                                  │
│ Output too long and was saved to: /path/to/output.txt                        │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders when not focused 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ Test result                                                                  │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders with limited terminal height 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool-with-result Tool with output                                         │
│                                                                              │
│ This is a long result that might need height constraints                     │
│                                                                              │
│ ✓  another-tool Another tool                                                 │
│                                                                              │
│ More output here                                                             │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Golden Snapshots > renders with narrow terminal width 1`] = `
"╭──────────────────────────────────────╮
│ ✓  very-long-tool-name-that-might-wr │
│    ap This is a very long            │
│    description that might cause      │
│    wrapping issues                   │
│                                      │
│ Test result                          │
╰──────────────────────────────────────╯"
`;

exports[`<ToolGroupMessage /> > Height Calculation > calculates available height correctly with multiple tools with results 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ Result 1                                                                     │
│                                                                              │
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
│ Result 2                                                                     │
│                                                                              │
│ ✓  test-tool A tool for testing                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;
